# turbo-tui

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HISTORY.md  LICENSE  README.md  ROADMAP.md  STANDARDS.md  TESTING.md
discussions/: 1-four-code-ide.md  2-window-manager-ratatui.md
docs/: DESIGN-horizontal-bar.md  PLAN-v0.2.1.md  PLAN-v0.2.2.md  PLAN-v0.2.md  RES-0001-performance-research.md  RES-0002-reference-projects-architecture.md
examples/: demo.rs  gen_themes.rs
src/: application.rs  button.rs  clip.rs  command.rs  desktop.rs  dialog.rs  frame.rs  group.rs  horizontal_bar.rs  lib.rs  menu_bar.rs  menu_box.rs  msgbox.rs  overlay.rs  scrollbar.rs  static_text.rs  status_bar.rs  status_line.rs  theme.rs  theme_json.rs  view.rs  window.rs
src/container/: dispatch.rs  draw.rs  mod.rs
themes/: dark.json  matrix.json  modern.json  turbo-vision.json  windows-classic.json  windows.json
